# mai-backend-exersise

./: .gitignore  README.md  docker-compose.m1.yml  docker-compose.yml
api/: Dockerfile  Dockerfile.m1  entrypoint.sh  manage.py  pyproject.toml
api/core/: admin.py  serializers.py  views.py
api/core/migrations/: 0001_initial.py  0002_course_alter_school_id_teacher_student_course_school_and_more.py  0003_alter_course_teacher.py
api/core/models/: __init__.py  administrator.py  course.py  school.py  student.py  teacher.py
api/core/tests/: test_admin.py  test_course.py  test_school.py  test_student.py  test_teacher.py
api/new_app/: asgi.py  settings.py  urls.py  wsgi.py
